--- a/web-page/src/components/Card.css
+++ b/web-page/src/components/Card.css
@@ -3,6 +3,10 @@
     padding-top: 24px;
 }
 
+.card .card-content {
+    padding-bottom: 0px;
+}
+
 pre {
     white-space: pre-wrap;       /* Since CSS 2.1 */
     white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
