--- a/web-page/src/components/Card.css
+++ b/web-page/src/components/Card.css
@@ -1,3 +1,17 @@
 .card .card-image img {
-    width: auto;
+    width: 100%;
+    padding-top: 24px;
+}
+
+.card .card-content {
+    padding-bottom: 0px;
+}
+
+pre {
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+    margin: 0;
 }
