--- a/web-page/src/components/EnergyColor.css
+++ b/web-page/src/components/EnergyColor.css
@@ -1,9 +1,9 @@
 .energy-color {
     border-radius: 100%;
-    height: 15px;
-    width: 15px;
+    height: 20px;
+    width: 20px;
     text-align: center;
     float: left;
-    margin-right: 1px;
-    font-size: 10px;
+    margin: 0 1px 1px 0;
+    font-size: 14px;
 }
