--- a/web-page/src/components/FilterSideBar/index.css
+++ b/web-page/src/components/FilterSideBar/index.css
@@ -18,3 +18,11 @@
     top: 0;
     position: sticky;
 }
+
+.chip .filter-chip {
+    cursor: pointer;
+    float: right;
+    font-size: 16px;
+    line-height: 32px;
+    padding-left: 8px;
+}
